# Sparrow

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: .dockerignore  pyproject.toml
backend/api/: Dockerfile
backend/api/app/: main.py
backend/coordinator/: Dockerfile
backend/coordinator/app/: main.py
backend/shared/: pyproject.toml
backend/shared/rag_shared/: __init__.py  health.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/pages/: index.tsx
