[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "Backend monorepo (API + Coordinator) for RAG platform"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = { version = "0.30.1", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.6"
isort = "^5.13.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

