[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "Backend monorepo (API + Coordinator) for RAG platform"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = { version = "0.30.1", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.6"
isort = "^5.13.2"
pytest = "^8.2.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["rag_shared"]
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = [
    ".pre-commit-config.yaml"
]
force-exclude = true

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","ARG","PL","RUF"]
ignore = ["E501"]  # let Black handle line length
exclude = ["**/migrations/**"]
